# Computer-Graphics

./: .gitignore  .ignore  CMakeLists.txt  README.md  report.md
src/: NPC.cpp  NPC.h  genBaseElements.cpp  genBaseElements.h  main.cpp  media.h  playmusic.cpp  playmusic.h  roaming.h  screenshot.cpp  screenshot.h  shaders.h  texture_mapping.cpp  texture_mapping.h
src/base/: application.cpp  application.h  bounding_box.h  camera.cpp  camera.h  frame_rate_indicator.h  framebuffer.h  frustum.h  glsl_program.cpp  glsl_program.h  input.h  light.h  model.cpp  model.h  object3d.cpp  object3d.h  otctree.h  plane.h  skybox.cpp  skybox.h  texture.cpp  texture.h  vertex.h
